# nWave

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/guides/: installation-guide.md
nWave/: framework-catalog.yaml
nWave/agents/: nw-product-owner.md
nWave/tasks/nw/: deliver.md  design.md  devops.md  execute.md
nWave/templates/: opencode-des-plugin.ts.template  prepare-commit-msg.template
nwave_ai/: cli.py
plugins/nw/agents/: nw-product-owner.md
plugins/nw/commands/: discuss.md  distill.md  roadmap.md
plugins/nw/hooks/: hooks.json
scripts/: build_plugin.py
scripts/framework/: measure_adoption.py
scripts/hooks/: nwave_attribution_hook.py
scripts/install/: attribution_utils.py  install_copilot_agents.py  install_nwave.py
scripts/install/plugins/: attribution_plugin.py  opencode_agents_plugin.py  opencode_commands_plugin.py  opencode_skills_plugin.py  skills_plugin.py
scripts/release/: next_version.py
scripts/shared/: install_paths.py  platform_contracts.py
scripts/validation/: validate_platform_contracts.py
tests/e2e/: Dockerfile.verify-python-portability  Dockerfile.verify-v3.1-rc
tests/installer/unit/: test_attribution_cli.py
tests/installer/unit/git_workflow/: test_commit_msg_hook.py
tests/installer/unit/plugins/: test_attribution_plugin.py  test_opencode_agents_plugin.py  test_opencode_agents_skill_paths.py  test_opencode_commands_path_rewrite.py  test_opencode_des_plugin.py  test_opencode_skills_plugin.py  test_python_path_resolution_in_skills.py
tests/plugins/install/: test_framework_plugin_registry.py
tests/release/: test_cz_version_calculation.py
